--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ serde = { version = "1.0.123", features = ["derive"] }
 pinky-swear = "5.1.0"
 log = "0.4.0"
 env_logger = "0.8.4"
-
+async-trait = "0.1.52"
 
 [dev-dependencies]
 
