--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ pinky-swear = "5.1.0"
 log = "0.4.0"
 env_logger = "0.8.4"
 async-trait = "0.1.52"
-#ssdp = { git = "https://github.com/samuel-cavalcanti/ssdp-rs.git", branch = "rust-2021" }
-ssdp = { path = "../ssdp-rs" }
+ssdp = { git = "https://github.com/samuel-cavalcanti/ssdp-rs.git", branch = "rust-2021" }
+#ssdp = { path = "../ssdp-rs" }
 regex = "1.7.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
